--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -10,8 +10,13 @@ http {
 
     server {
         listen 80;
-        listen [::]:80;
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
 
+    server {
+        listen 443 ssl;
         location / {
             proxy_pass http://csduck;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
