--- a/docker/nginx/nginx.cert.conf
+++ b/docker/nginx/nginx.cert.conf
@@ -4,18 +4,15 @@ events {
 
 http {
 
-    upstream csduck {
-        server web:8000;
-    }
-
     server {
+        listen [::]:80;
         listen 80;
-        location / {
-            proxy_pass http://csduck;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Prefix /;
+
+        server_name flow2and4.me csduck.flow2and4.me pyduck.flow2and4.me faduck.flow2and4.me;
+        
+        location ~/.well-known/acme-challenge {
+            allow all;
+            root /var/www/certbot;
         }
     }
 }
