--- a/compose.cert.yaml
+++ b/compose.cert.yaml
@@ -1,5 +1,4 @@
 services:
-
   nginx:
     container_name: nginx
     image: nginx:1.23.4-alpine
@@ -7,14 +6,27 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/nginx.cert.conf:/etc/nginx/nginx.conf
       - ./docker/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./docker/certbot/www:/var/www/certbot
 
   certbot:
     image: certbot/certbot
-    restart: unless-stopped
     volumes:
       - ./docker/certbot/conf:/etc/letsencrypt
       - ./docker/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    command:
+      [
+        "certonly",
+        "--reinstall",
+        "--webroot",
+        "--webroot-path=/var/www/certbot",
+        "--email",
+        "flow2kudo@naver.com",
+        "--agree-tos",
+        "--no-eff-email",
+        "-d",
+        "faduck.flow2and4.me",
+      ]
+    depends_on:
+      - nginx
