--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,6 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     volumes:
+      - ./csduck:/app/csduck
       - ./instance:/app/instance
     expose:
       - "8000"
@@ -16,16 +17,35 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./docker/nginx/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/certbot/conf:/etc/letsencrypt:ro
+      - ./docker/certbot/www:/var/www/certbot
     depends_on:
       - web
 
   certbot:
     image: certbot/certbot
-    restart: unless-stopped
     volumes:
       - ./docker/certbot/conf:/etc/letsencrypt
       - ./docker/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    command:
+      [
+        "certonly",
+        "--reinstall",
+        "--webroot",
+        "--webroot-path=/var/www/certbot",
+        "--email",
+        "flow2kudo@naver.com",
+        "--agree-tos",
+        "--no-eff-email",
+        "-d",
+        "csduck.flow2and4.me",
+        "-d",
+        "pyduck.flow2and4.me",
+        "-d",
+        "faduck.flow2and4.me",
+        "-d",
+        "flow2and4.me"
+      ]
+    depends_on:
+      - nginx
