--- a/docker/nginx/nginx.prod.conf
+++ b/docker/nginx/nginx.prod.conf
@@ -16,7 +16,15 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
+
+        server_name flow2and4.me;
+
+        ssl_certificate /etc/letsencrypt/live/flow2and4.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/flow2and4.me/privkey.pem;
+
+        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+
         location / {
             proxy_pass http://csduck;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,4 +33,62 @@ http {
             proxy_set_header X-Forwarded-Prefix /;
         }
     }
+
+    # server {
+    #     listen 443 ssl http2;
+
+    #     server_name pyduck.flow2and4.me;
+
+    #     ssl_certificate /etc/letsencrypt/live/pyduck.flow2and4.me/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/pyduck.flow2and4.me/privkey.pem;
+
+    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        
+
+    #     location / {
+    #         proxy_pass http://csduck;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_set_header X-Forwarded-Host $host;
+    #         proxy_set_header X-Forwarded-Prefix /;
+    #     }
+    # }
+
+    # server {
+    #     listen 443 ssl http2;
+
+    #     server_name csduck.flow2and4.me;
+
+    #     ssl_certificate /etc/letsencrypt/live/csduck.flow2and4.me/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/csduck.flow2and4.me/privkey.pem;
+
+    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        
+
+    #     location / {
+    #         proxy_pass http://csduck;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_set_header X-Forwarded-Host $host;
+    #         proxy_set_header X-Forwarded-Prefix /;
+    #     }
+    # }
+
+
+    # server {
+    #     listen 443 ssl http2;
+
+    #     ssl_certificate /etc/letsencrypt/live/faduck.flow2and4.me/fullchain.pem;
+    #     ssl_certificate_key /etc/letsencrypt/live/faduck.flow2and4.me/privkey.pem;
+
+    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        
+    #     location / {
+    #         proxy_pass http://csduck;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_set_header X-Forwarded-Host $host;
+    #         proxy_set_header X-Forwarded-Prefix /;
+    #     }
+    # }
 }
