before production: just saving

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "html.format.wrapAttributes": "preserve-aligned"
+    "html.format.wrapAttributes": "preserve-aligned",
+    "html.format.preserveNewLines": true
 }
