before production: just saving

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .env.prod
 docker/certbot/conf/*
 !docker/certbot/conf/sample.html
+
+**/community/static/upload/
 # csduck [END]
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask,linux,windows,visualstudiocode
