--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     volumes:
-      - ./csduck:/app/csduck
+      - ./flow2and4:/app/flow2and4
       - ./instance:/app/instance
     expose:
       - "8000"
