--- a/docker/nginx/nginx.prod.conf
+++ b/docker/nginx/nginx.prod.conf
@@ -23,7 +23,7 @@ http {
         ssl_certificate /etc/letsencrypt/live/flow2and4.me/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/flow2and4.me/privkey.pem;
 
-        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
         location / {
             proxy_pass http://csduck;
