before production: just saving

--- a/docker/nginx/nginx.prod.conf
+++ b/docker/nginx/nginx.prod.conf
@@ -23,7 +23,22 @@ http {
         ssl_certificate /etc/letsencrypt/live/flow2and4.me/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/flow2and4.me/privkey.pem;
 
-        # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        location / {
+            proxy_pass http://csduck;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Prefix /;
+        }
+    }
+
+    server {
+        listen 443 ssl http2;
+
+        server_name pyduck.flow2and4.me;
+
+        ssl_certificate /etc/letsencrypt/live/pyduck.flow2and4.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/pyduck.flow2and4.me/privkey.pem;
 
         location / {
             proxy_pass http://csduck;
@@ -34,61 +49,37 @@ http {
         }
     }
 
-    # server {
-    #     listen 443 ssl http2;
+    server {
+        listen 443 ssl http2;
 
-    #     server_name pyduck.flow2and4.me;
+        server_name faduck.flow2and4.me;
 
-    #     ssl_certificate /etc/letsencrypt/live/pyduck.flow2and4.me/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/pyduck.flow2and4.me/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/faduck.flow2and4.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/faduck.flow2and4.me/privkey.pem;
 
-    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        
+        location / {
+            proxy_pass http://csduck;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Prefix /;
+        }
+    }
 
-    #     location / {
-    #         proxy_pass http://csduck;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Prefix /;
-    #     }
-    # }
+    server {
+        listen 443 ssl http2;
 
-    # server {
-    #     listen 443 ssl http2;
+        server_name csduck.flow2and4.me;
 
-    #     server_name csduck.flow2and4.me;
+        ssl_certificate /etc/letsencrypt/live/csduck.flow2and4.me/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/csduck.flow2and4.me/privkey.pem;
 
-    #     ssl_certificate /etc/letsencrypt/live/csduck.flow2and4.me/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/csduck.flow2and4.me/privkey.pem;
-
-    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        
-
-    #     location / {
-    #         proxy_pass http://csduck;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Prefix /;
-    #     }
-    # }
-
-
-    # server {
-    #     listen 443 ssl http2;
-
-    #     ssl_certificate /etc/letsencrypt/live/faduck.flow2and4.me/fullchain.pem;
-    #     ssl_certificate_key /etc/letsencrypt/live/faduck.flow2and4.me/privkey.pem;
-
-    #     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        
-    #     location / {
-    #         proxy_pass http://csduck;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Prefix /;
-    #     }
-    # }
+        location / {
+            proxy_pass http://csduck;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Prefix /;
+        }
+    }
 }
