before production: just saving

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,14 +4,14 @@ events {
 
 http {
 
-    upstream csduck {
+    upstream flow2and4 {
         server web:8000;
     }
 
     server {
         listen 80;
         location / {
-            proxy_pass http://csduck;
+            proxy_pass http://flow2and4;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
