--- a/compose.yaml
+++ b/compose.yaml
@@ -19,3 +19,14 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - web
+  redis:
+    image: redis:latest
+    expose:
+      - "6379"
+    healthcheck:
+      test: ["CMD", "redis-cli" , "ping"]
+      interval: 10s
+      timeout: 30s
+      retries: 50
+      start_period: 30s
+    restart: always
