before production: just saving

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -22,3 +22,15 @@ services:
       - ./docker/certbot/www:/var/www/certbot
     depends_on:
       - web
+  
+  redis:
+    image: redis:latest
+    expose:
+      - "6379"
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 30s
+      retries: 50
+      start_period: 30s
+    restart: always
