--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,6 @@
 services:
   web:
+    container_name: web
     build:
       context: .
       dockerfile: Dockerfile
@@ -22,6 +23,7 @@ services:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - web
+
   redis:
     image: redis:latest
     expose:
@@ -33,3 +35,21 @@ services:
       retries: 50
       start_period: 30s
     restart: always
+
+  worker:
+    container_name: worker
+    environment:
+      - CELERY_MODE=prodlike
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - type: bind
+        source: ./flow2and4
+        target: /app/flow2and4
+      - type: bind
+        source: ./instance
+        target: /app/instance
+    command: celery -A make_celery worker --loglevel INFO
+    depends_on:
+      - redis
